gateway-service/src/main/k8s/vegas-gateway-service-test.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: vegas-gateway-test
  namespace: vegas-test
spec:
  replicas: ^replicas^
  selector:
    matchLabels:
      run: vegas-gateway-test
  template:
    metadata:
      labels:
        run: vegas-gateway-test
    spec:
      nodeSelector:
        node/cpuservice: vegas
      imagePullSecrets:
      - name: regcred
      containers:
      - name: vegas-gateway-test-containers
        image: docker.registry:30018/vegas/gateway-service:^image^
        ports:        
        - containerPort: 9091
        volumeMounts:
        - name: app-log
          mountPath: /logs   #容器log路径
        - name: host-time
          mountPath: /etc/localtime
        resources:
          requests:
            cpu:  2000m
            memory: 4000Mi
          limits:
            cpu:  2000m
            memory: 4000Mi
      - name: filebeat
        image: docker.registry:30018/zhiyu_containers/filebeat:0.0.1
        volumeMounts:
        - name: gateway-test-filebeat-config
          mountPath: /filebeat
        - name: app-log
          mountPath: /log
        - name: host-time
          mountPath: /etc/localtime
        resources:
          requests:
            cpu:  200m
            memory: 400Mi
          limits:
            cpu:  200m
            memory: 400Mi
      volumes:
      - name: gateway-test-filebeat-config
        configMap:
          name: gateway-test-filebeat-config
      - name: app-log
        emptyDir: {}
      - name: host-time
        hostPath:
          path: /etc/localtime
