gateway-service/src/main/k8s/vegas-gateway-service.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: vegas-gateway-service
  namespace: vegas-online
spec:
  replicas: ^replicas^
  selector:
    matchLabels:
      run: vegas-gateway-service
  template:
    metadata:
      labels:
        run: vegas-gateway-service
    spec:
      nodeSelector:
        node/cpuservice: vegas
      imagePullSecrets:
      - name: regcred
      containers:
      - name: vegas-gateway-service-containers
        image: docker.registry:30018/vegas/gateway-service:^image^
        ports:        
        - containerPort: 9091
        volumeMounts:
        - name: app-log
          mountPath: /logs   #容器log路径
        - name: host-time
          mountPath: /etc/localtime
        resources:
          requests:
            cpu:  2000m
            memory: 4000Mi
          limits:
            cpu:  2000m
            memory: 4000Mi
      - name: filebeat
        image: docker.registry:30018/zhiyu_containers/filebeat:0.0.1
        volumeMounts:
        - name: gateway-filebeat-config
          mountPath: /filebeat
        - name: app-log
          mountPath: /log
        - name: host-time
          mountPath: /etc/localtime
        resources:
          requests:
            cpu:  200m
            memory: 400Mi
          limits:
            cpu:  200m
            memory: 400Mi
      volumes:
      - name: gateway-filebeat-config
        configMap:
          name: gateway-filebeat-config
      - name: app-log
        emptyDir: {}
      - name: host-time
        hostPath:
          path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: vegas-gateway-service
  namespace: vegas-online
  labels:
    run: vegas-gateway-service
spec:
  type: NodePort
  ports:
  - port: 9091
  selector:
    run: vegas-gateway-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vegas-gateway-service
  namespace: vegas-online
spec:
  rules:
  - host: gateway.vegas.100tal.com
    http:
      paths:
#      - path: /
      - backend:
          serviceName: vegas-gateway-service
          servicePort: 9091
